fixed issue on mobile devices

--- a/css/default.css
+++ b/css/default.css
@@ -26,6 +26,7 @@ div#page {
   padding-right: var(--logo-size);
   display: flex;
   flex-direction: column;
+  justify-content: flex-start;
   overflow: auto;
 }
 
